# genai-lab

./: .gitignore  LESSONS.md  README.md  constraints.txt  must-know-gpt.md  mypy.ini  pyproject.toml  requirements.txt
notebooks/: 01_gpt_assistant.ipynb
src/genai_lab/: setup.py
src/genai_lab/chat/: chat_demo.py
src/genai_lab/config/: config.py  messages.py  samples.py
src/genai_lab/core/: assist.py  assistant.py  assistant_cli.py  assistant_demo.py  assistant_utils.py
src/genai_lab/dialog/: dialog_demo.py  dialog_demo_output.txt  env_setup.py
src/genai_lab/planner/: planner_db.py  planner_demo.py  planner_output.txt  planner_tools.py
src/genai_lab/prompts/: assist_prompts.py
src/genai_lab/rag/: rag_simple.py
src/genai_lab/samples/: agentic-ai-aws.txt  portman-bio.txt
