[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "genai-lab"
version = "0.1.0"
description = "ML Package for my first end-to-end Generative AI app"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name="babaksoft", email="babak.eslamieh@gmail.com" },
]
keywords = ["machine learning"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

dependencies = [
    "chromadb",
    "click",
    "fastapi",
    "ipykernel",
    "openai",
    "psycopg2-binary",
    "python-dotenv",
    "SQLAlchemy",
    "streamlit",
]

[project.urls]
Homepage = "https://github.com/babaksoft/genai-lab"
Issues = "https://github.com/babaksoft/genai-lab/issues"

[project.optional-dependencies]
build = [
    "build",
    "hatchling",
]

dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "ruff",
]

[tool.isort]
profile = "black"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/genai_lab"]
